# SGA

./: CMakeLists.txt
src/: CMakeLists.txt  sga.cpp  sga.hpp
test/: Record.cpp  quadratic_solver.cpp  test.cpp
